# pywinhttp

./: .gitignore  LICENSE  README.md  demo1.py  demo2.py  pyproject.toml
pywinhttp/: __init__.py  __version__.py  winhttp.py
