[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pywinhttp"
version = "1.0.1"
authors = [
  { name="encoderlee", email="encoderlee@email.com" },
]
description = "a python http client implemented based on the winhttp library"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/encoderlee/pywinhttp"